# sesna-sed-fit

./: pyproject.toml
src/: example_fit.py  example_parfit.py
src/sesnasedfit/: __init__.py  fit.backup  fit.py  gaia_detect.backup  gaia_detect.backup.Nov17  gutermuth_scoring.py  gutermuth_scoring_numpy.py  gutermuth_scoring_oldscoring.py  io.backup  io.py
src/sesnasedfit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
